--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,10 +43,10 @@ services:
     ports:
       - "3306:3306"
     environment:
-      MYSQL_ROOT_PASSWORD: default_php
-      MYSQL_DATABASE: default_php
-      MYSQL_USER: default_php
-      MYSQL_PASSWORD: default_php
+      MYSQL_ROOT_PASSWORD: lolai
+      MYSQL_DATABASE: lolai
+      MYSQL_USER: lolai
+      MYSQL_PASSWORD: lolai
     volumes:
       - ./data/mysql:/var/lib/mysql
 
@@ -56,8 +56,8 @@ services:
     image: phpmyadmin/phpmyadmin
     environment:
       PMA_HOST: mysql
-      PMA_USER: default_php
-      PMA_PASSWORD: default_php
+      PMA_USER: lolai
+      PMA_PASSWORD: lolai
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.phpmyadmin.rule=Host(`phpmyadmin.localhost`)"
@@ -70,7 +70,7 @@ services:
   redis-commander:
     image: rediscommander/redis-commander:latest
     environment:
-      - REDIS_HOSTS=default_php:redis:6379
+      - REDIS_HOSTS=lolai:redis:6379
     depends_on:
       - redis
     labels:
