--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,17 @@
-version: '3.3'
-
 services:
+  cron:
+    build: cron-service
+    volumes:
+      - ./cron-service/cron.sh:/var/www/cron.sh
+      - ./cron-service/cron.log:/var/www/cron.log
+      - ./cron-service/cron.d:/etc/cron/crontab
+    depends_on:
+      - api
 
   api:
     build: api
     volumes:
-      - ./api:/var/www/api:delegated
+      - ./api:/var/www/api
     ports:
       - 9003
     extra_hosts:
@@ -70,7 +76,7 @@ services:
   redis-commander:
     image: rediscommander/redis-commander:latest
     environment:
-      - REDIS_HOSTS=lolai:redis:6379
+      - REDIS_HOSTS=local:redis:6379
     depends_on:
       - redis
     labels:
@@ -79,6 +85,29 @@ services:
       - "traefik.http.routers.redis_commander.entrypoints=web"
       - "traefik.http.routers.redis_commander.service=redis_commander"
       - "traefik.http.services.redis_commander.loadbalancer.server.port=8081"
+
+  mongo:
+    image: mongo
+    restart: always
+    volumes:
+      - ./data/mongodb:/data/db:rw
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: lolai
+      MONGO_INITDB_ROOT_PASSWORD: lolai
+
+  mongo-express:
+    image: mongo-express
+    restart: always
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: lolai
+      ME_CONFIG_MONGODB_ADMINPASSWORD: lolai
+      ME_CONFIG_MONGODB_URL: mongodb://lolai:lolai@mongo:27017/
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.mongo_express.rule=Host(`mongo.localhost`)"
+      - "traefik.http.routers.mongo_express.entrypoints=web"
+      - "traefik.http.routers.mongo_express.service=mongo_express"
+      - "traefik.http.services.mongo_express.loadbalancer.server.port=8081"
 
   mail:
     user: root
